--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "repository": "zeixcom/pingu",
   "dependencies": {
     "change-case": "^3.0.1",
+    "command-exists": "^1.2.2",
     "yeoman-generator": "^1.1.0"
   }
 }
