--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-pingu",
+  "name": "generator-pingu-react",
   "version": "0.1.0-alpha",
-  "description": "Pingu - Zeix React Yeoman Generator",
+  "description": "Pingu React - Zeix React Yeoman Generator",
   "files": [
     "app",
     "component",
@@ -12,7 +12,7 @@
   "main": "index.js",
   "author": "Robert Vogt <robert@smartive.ch>",
   "license": "MIT",
-  "repository": "zeixcom/pingu",
+  "repository": "zeixcom/pingu-react",
   "dependencies": {
     "change-case": "^3.0.1",
     "command-exists": "^1.2.2",
