--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "change-case": "^3.0.1",
     "command-exists": "^1.2.2",
     "yeoman-generator": "^1.1.0"
+  },
+  "devDependencies": {
+    "dialog-settings": "^1.2.0"
   }
 }
